force-app/main/default/objects/Suites__c/Suites__c.object-meta.xml
<CustomObject>
    <label>Suites</label>
    <nameField>
        <displayFormat>SU-{0000}</displayFormat>
        <label>Suite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>