force-app/main/default/objects/Suites__c/fields/Build_Out__c.field-meta.xml
<CustomField>
    <fullName>Build_Out__c</fullName>
    <label>Build Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Rebuild Needed</fullName>
            </value>
            <value>
                <fullName>Raw</fullName>
            </value>
            <value>
                <fullName>Second Generation</fullName>
            </value>
            <value>
                <fullName>Spec Suite</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>White Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>