force-app/main/default/objects/Suites__c/fields/Building_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Building_Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Landlord</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Landlord</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suites (Building Landlord)</relationshipLabel>
    <relationshipName>Suites_Landlord</relationshipName>
    <type>Lookup</type>
</CustomField>