force-app/main/default/objects/Suites__c/fields/Floor_Addition__c.field-meta.xml
<CustomField>
    <fullName>Floor_Addition__c</fullName>
    <label>Floor Addition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>