force-app/main/default/objects/Suites__c/fields/Floor_Plan__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan__c</fullName>
    <label>Floor Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>No Plan Exists</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>