force-app/main/default/objects/Suites__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Building__r.Full_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>