force-app/main/default/objects/Suites__c/fields/Landlord_Use__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Use__c</fullName>
    <label>Landlord Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office of the Building</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>