force-app/main/default/objects/Suites__c/fields/Master_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Master_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Tenant</label>
    <referenceTo>Suites__c</referenceTo>
    <relationshipLabel>Suites</relationshipLabel>
    <relationshipName>Suites1</relationshipName>
    <type>Lookup</type>
</CustomField>