force-app/main/default/objects/Suites__c/fields/Sub_Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sub_Lease_Start_Date__c</fullName>
    <label>Sub-Lease Start Date</label>
    <type>Date</type>
</CustomField>