force-app/main/default/objects/Suites__c/fields/Suite_Asking_Rate__c.field-meta.xml
<CustomField>
    <fullName>Suite_Asking_Rate__c</fullName>
    <label>Suite Asking Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>