force-app/main/default/objects/Suites__c/fields/Suite_City__c.field-meta.xml
<CustomField>
    <fullName>Suite_City__c</fullName>
    <formula>Building__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite City</label>
    <type>Text</type>
</CustomField>