force-app/main/default/objects/Suites__c/fields/Suite_Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Suite_Floor_Number__c</fullName>
    <formula>VALUE(TEXT(Suite_Floor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite Floor Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>