force-app/main/default/objects/Suites__c/fields/Suite_LEXP__c.field-meta.xml
<CustomField>
    <fullName>Suite_LEXP__c</fullName>
    <label>Suite LEXP</label>
    <type>Date</type>
</CustomField>