force-app/main/default/objects/Suites__c/fields/Suite_Name_hyperLink__c.field-meta.xml
<CustomField>
    <fullName>Suite_Name_hyperLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id ,  Suite_Name_Formula__c  ,&apos;_self&apos;)</formula>
    <label>Suite Name</label>
    <type>Text</type>
</CustomField>