force-app/main/default/objects/Suites__c/fields/Suite_Number_Sort__c.field-meta.xml
<CustomField>
    <fullName>Suite_Number_Sort__c</fullName>
    <formula>VALUE(Suite_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite Number Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>