force-app/main/default/objects/Suites__c/fields/Suite_RSF__c.field-meta.xml
<CustomField>
    <fullName>Suite_RSF__c</fullName>
    <label>Suite RSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>