force-app/main/default/objects/Suites__c/fields/Suite_State__c.field-meta.xml
<CustomField>
    <fullName>Suite_State__c</fullName>
    <formula>Building__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite State</label>
    <type>Text</type>
</CustomField>