force-app/main/default/objects/Suites__c/fields/Suite_Status__c.field-meta.xml
<CustomField>
    <fullName>Suite_Status__c</fullName>
    <formula>IF( ISPICKVAL( Vacant__c , &apos;Yes&apos;) , &apos;Vacant&apos;,
IF( ISPICKVAL( Vacant__c , &apos;No&apos;) , IF(ISBLANK( Account__r.Name ), Tenant_Company_Name__c, Account__r.Name ) ,
IF( ISPICKVAL( Vacant__c, &apos;Marketed for Sublease&apos;), Account__r.Name, &apos;&apos;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite Status</label>
    <type>Text</type>
</CustomField>