force-app/main/default/objects/Suites__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Suites</relationshipLabel>
    <relationshipName>Suites</relationshipName>
    <type>Lookup</type>
</CustomField>