force-app/main/default/objects/Suites__c/fields/Tenant_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Company_Name__c</fullName>
    <label>Tenant Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>