force-app/main/default/objects/Suites__c/fields/Tenant_Company_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Company_Name_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Tenant__c ,  Tenant__r.Company , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Company Name</label>
    <type>Text</type>
</CustomField>