force-app/main/default/objects/Suites__c/fields/Vacant__c.field-meta.xml
<CustomField>
    <fullName>Vacant__c</fullName>
    <label>Vacant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Marketed for Sublease</fullName>
            </value>
            <value>
                <fullName>Marketed Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>