force-app/main/default/objects/Suites__c/recordTypes/Not_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Not_Tracking</fullName>
    <active>true</active>
    <label>Not Tracking</label>
</RecordType>