force-app/main/default/objects/Suites__c/recordTypes/Vacancy.recordType-meta.xml
<RecordType>
    <fullName>Vacancy</fullName>
    <active>true</active>
    <label>Vacancy</label>
</RecordType>