force-app/main/default/objects/Suites__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Suite_LEXP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>